[package]
name = "symsrv"
version = "0.3.0"
edition = "2021"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
description = "A Microsoft symsrv symbol server consumer (downloader + cache)"
repository = "https://github.com/mstange/symsrv/"
readme = "README.md"
exclude = ["/.github", "/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "stream"
] }
dirs = "5"
tokio = { version = "1.17.0", features = ["fs"] }
thiserror = "1.0.26"
cab = "0.5"
futures-util = "0.3.26"
fs4 = { version = "0.7.0", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.1.0"
tokio = { version = "1.17.0", features = ["macros"] }
mockito = "1.2"
