[package]
name = "symsrv"
version = "0.5.2"
edition = "2021"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
description = "A Microsoft symsrv symbol server consumer (downloader + cache)"
repository = "https://github.com/mstange/symsrv/"
readme = "README.md"
exclude = ["/.github", "/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream"
] }
dirs = "5"
tokio = { version = "1.25.0", default-features = false, features = ["fs"] }
thiserror = "1.0.26"
# cab = { path = "../rust-cab" }
cab = "0.6"
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
fs4 = { version = "0.8.0" }
async-compression = { version = "0.4.6", default-features = false, features = [
    "tokio",
    "futures-io",
    "gzip"
] }
http = "1"
scopeguard = { version = "1.2.0", default-features = false }

[dev-dependencies]
tempfile = "3.1.0"
mockito = "1.2"
tokio = { version = "1.25.0", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread"
] }
indicatif = "0.17.3"
clap = { version = "4.5.1", features = ["derive"] }
