[package]
name = "symsrv"
version = "0.5.5"
edition = "2021"
authors = ["Markus Stange <mstange@themasta.com>"]
license = "MIT/Apache-2.0"
description = "A Microsoft symsrv symbol server consumer (downloader + cache)"
repository = "https://github.com/mstange/symsrv/"
readme = "README.md"
exclude = ["/.github", "/tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream"
] }
dirs = "6"
tokio = { version = "1.39", default-features = false, features = ["fs"] }
thiserror = "2"
# cab = { path = "../rust-cab" }
cab = "0.6"
futures-util = { version = "0.3.30", default-features = false, features = ["io"] }
fs4 = { version = "0.13" }
async-compression = { version = "0.4.6", default-features = false, features = [
    "tokio",
    "futures-io",
    "gzip"
] }
http = "1"
scopeguard = { version = "1.2.0", default-features = false }

[dev-dependencies]
tempfile = "3.10"
mockito = "1.4"
tokio = { version = "1.39", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread"
] }
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
